Harden System Security v1.0.38.0
Harden System Security v1.0.38.0

Updated the Microsoft 365 Apps Security Baseline from 24H2 to 25H2. Fixes this issue: https://github.com/HotCakeX/Harden-Windows-Security/issues/1000

--- a/Harden System Security/ReleaseNotes.txt
+++ b/Harden System Security/ReleaseNotes.txt
@@ -1,3 +1,1 @@
-* Updated dependencies to the latest version.
-
-* In the app close confirmation dialog, the default selected button is now set to "No" instead of "Yes" to follow best practices.
+* Updated the Microsoft 365 Apps Security Baseline from 24H2 to 25H2.
