--- a/AppControl Manager/Strings/de-DE/Resources.resw
+++ b/AppControl Manager/Strings/de-DE/Resources.resw
@@ -6533,4 +6533,10 @@ HINWEIS: Diese Option wird immer erzwungen, wenn eine beliebige App Control-UMCI
   <data name="OtherPolicies" xml:space="preserve">
     <value>Andere Richtlinien</value>
   </data>
+  <data name="PolicyToAddNewRulesTo" xml:space="preserve">
+    <value>Richtlinie zum Hinzufügen neuer Regeln</value>
+  </data>
+    <data name="SearchThePoliciesLibrary.Text" xml:space="preserve">
+    <value>Nach Richtlinien in der Bibliothek suchen</value>
+  </data>
 </root>
