--- a/AppControl Manager/Strings/en-US/Resources.resw
+++ b/AppControl Manager/Strings/en-US/Resources.resw
@@ -6533,8 +6533,10 @@ NOTE: This option is always enforced if any App Control UMCI policy enables it. 
   <data name="OtherPolicies" xml:space="preserve">
     <value>Other Policies</value>
   </data>
-  <!--NEW-->
   <data name="PolicyToAddNewRulesTo" xml:space="preserve">
     <value>Policy to Add New Rules to</value>
+  </data>
+  <data name="SearchThePoliciesLibrary.Text" xml:space="preserve">
+    <value>Search for policies in the library</value>
   </data>
 </root>
